--- a/history/index.html
+++ b/history/index.html
@@ -3,7 +3,7 @@
   <head>
     <title> Ada Lovelace History</title>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="/assets/css/screen.css" />
+    <link rel="stylesheet" href=".assets/css/screen.css" />
   </head>
 
   <body>
