--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home: Lynn Matar</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/screen.css" />
+    <link rel="stylesheet" href="assets/css/screen.css" />
   </head>
 
   <body>
@@ -96,9 +96,9 @@
         <div class="ft-item">
           <h2 class="ft-title">Menu</h2>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/resume/">Resume</a></li>
-            <li><a href="/history/">History Project</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./resume/">Resume</a></li>
+            <li><a href="./history/">History Project</a></li>
           </ul>
         </div>
         <div class="ft-item">
