--- a/history/index.html
+++ b/history/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="g">
+<html lang="en">
   <head>
     <title> Ada Lovelace History</title>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href=".assets/css/screen.css" />
+    <link rel="stylesheet" href="assets/css/screen.css" />
   </head>
 
   <body>
@@ -188,9 +188,9 @@
         <div class="ft-item">
           <h2 class="ft-title">Menu</h2>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/resume/">Resume</a></li>
-            <li><a href="/history/">History Project</a></li>
+            <li><a href="../home">Home</a></li>
+            <li><a href="../resume/">Resume</a></li>
+            <li><a href="/">History Project</a></li>
           </ul>
         </div>
         <div class="ft-item">
