--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="g">
+<html lang="en">
   <head>
     <title>Home: Lynn Matar</title>
     <meta charset="UTF-8"/>
